--- a/gurps-manager-api/Views/Admin/Main.cshtml
+++ b/gurps-manager-api/Views/Admin/Main.cshtml
@@ -2,9 +2,9 @@
 <body>
     <div>
         <h2>Show Data</h2>
-        @Html.ActionLink("Show Disadvantages", "Get", "Disadvantages")<br />
+        @Html.ActionLink("Show Advantages", "Get", "Advantage")<br />
         @Html.ActionLink("Show Characters", "Get", "Characters")<br />
-        @Html.ActionLink("Show DisDisadvantages", "Get", "DisDisadvantages")<br />
+        @Html.ActionLink("Show Disadvantages", "Get", "Disadvantages")<br />
         @Html.ActionLink("Show Equipments", "Get", "Equipments")<br />
         @Html.ActionLink("Show Items", "Get", "Items")<br />
         @Html.ActionLink("Show Languages", "Get", "Languages")<br />
@@ -12,8 +12,8 @@
     </div>
     <div>
         <h2>Insert Data</h2>
-        @Html.ActionLink("Add Disadvantage", "AddDisadvantage", "Disadvantages")<br />
-        @Html.ActionLink("Add DisDisadvantage", "AddDisDisadvantage", "DisDisadvantages")<br />
+        @Html.ActionLink("Add Advantages", "AddAdvantage", "Advantages")<br />
+        @Html.ActionLink("Add Disadvantages", "AddDisadvantage", "Disadvantages")<br />
         @Html.ActionLink("Add Equipment", "AddEquipment", "Equipments")<br />
         @Html.ActionLink("Add Item", "AddItem", "Items")<br />
         @Html.ActionLink("Add Language", "AddLanguage", "Languages")<br />
@@ -21,9 +21,9 @@
     </div>
     <div>
         <h2>Delete All Data</h2>
-        @Html.ActionLink("Delete Disadvantages", "Delete", "Disadvantages")<br />
+        @Html.ActionLink("Delete Advantages", "Delete", "Advantages")<br />
         @Html.ActionLink("Delete Characters", "Delete", "Characters")<br />
-        @Html.ActionLink("Delete DisDisadvantages", "Delete", "DisDisadvantages")<br />
+        @Html.ActionLink("Delete Disadvantages", "Delete", "Disadvantages")<br />
         @Html.ActionLink("Delete Equipments", "Delete", "Equipments")<br />
         @Html.ActionLink("Delete Items", "Delete", "Items")<br />
         @Html.ActionLink("Delete Languages", "Delete", "Languages")<br />
