--- a/gurps-manager-api/Views/Admin/Main.cshtml
+++ b/gurps-manager-api/Views/Admin/Main.cshtml
@@ -2,7 +2,7 @@
 <body>
     <div>
         <h2>Show Data</h2>
-        @Html.ActionLink("Show Advantages", "Get", "Advantage")<br />
+        @Html.ActionLink("Show Advantages", "Get", "Advantages")<br />
         @Html.ActionLink("Show Characters", "Get", "Characters")<br />
         @Html.ActionLink("Show Disadvantages", "Get", "Disadvantages")<br />
         @Html.ActionLink("Show Equipments", "Get", "Equipments")<br />
