--- a/gurps-manager-api/Views/Equipments/AddEquipment.cshtml
+++ b/gurps-manager-api/Views/Equipments/AddEquipment.cshtml
@@ -18,6 +18,11 @@
             </div>
 
             <div>
+                @Html.LabelFor(model => model.NT)
+                @Html.TextBoxFor(model => model.NT)
+            </div>
+
+            <div>
                 @Html.LabelFor(model => model.Description)
                 @Html.TextBoxFor(model => model.Description)
             </div>
