--- a/gurps-manager-api/Views/Skills/AddSkill.cshtml
+++ b/gurps-manager-api/Views/Skills/AddSkill.cshtml
@@ -23,8 +23,8 @@
             </div>
             
             <div>
-                @Html.CheckBox("Strenght")
-                @Html.Label("Strenght")
+                @Html.CheckBox("Strength")
+                @Html.Label("Strength")
                 @Html.CheckBox("Dexterity")
                 @Html.Label("Dexterity")
                 @Html.CheckBox("Intelligence")
