--- a/gurps-manager-api/Views/Languages/AddLanguage.cshtml
+++ b/gurps-manager-api/Views/Languages/AddLanguage.cshtml
@@ -6,25 +6,24 @@
 {
     @Html.AntiForgeryToken()
 
+
     <div class="form-horizontal">
         <h4>Add a new Language to the database</h4>
         <hr />
         @Html.ValidationSummary(true)
 
-        <div>
-            <div>
-                @Html.LabelFor(model => model.Name)
-                @Html.TextBoxFor(model => model.Name)
-            </div>
-
-            <div>
-                @Html.LabelFor(model => model.Description)
-                @Html.TextBoxFor(model => model.Description)
-            </div>
-
-            <div>
-                <input type="submit" value="Add" class="btn btn-success" />
-            </div>
-        </div>
+        <table>
+            <tbody>
+                <tr>
+                    <td>@Html.LabelFor(model => model.Name)</td>
+                    <td>@Html.TextBoxFor(model => model.Name)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(model => model.Description)</td>
+                    <td colspan="2">@Html.TextAreaFor(model => model.Description, 5, 80, null)</td>
+                </tr>
+            </tbody>
+        </table>
+        <input type="submit" value="Add" class="btn btn-success" />
     </div>
 }
